# template-python-project-pypi

./: .gitignore  README.md  dev-requirements.txt  setup.cfg
folder_name/: module.py
