[metadata]
name = <PROJECT NAME>
version = <VERSION>
author = <AUTHOR NAME>
author_email = <AUTHOR EMAIL>
url = <GITHUB URL>
description = <DESCRIPTION>
long_description = file: README.md
long_description_content_type = text/markdown
keywords = <KEYWORDS, EXAMPLE, TEST>
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires =
    <EXAMPLE>
    requests == 2.28.2
